--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,18 @@ database
 
 results
 code
+
+dependencies/bedtools-2.29.1.tar.gz
+dependencies/bedtools2
+dependencies/Homo_sapiens.GRCh38.105.chr.gtf
+dependencies/clinvar_intronic_tidy.rda
+dependencies/MT_genes.rds
+dependencies/MANE.GRCh38.v1.0.ensembl_genomic.gtf
+dependencies/major_introns_tidy.rds
+dependencies/minor_introns_tidy.rds
+dependencies/hg38-blacklist.v2.bed
+dependencies/CNC_CDTS_CONS_gr.rda
+dependencies/Homo_sapiens.GRCh38.dna.primary_assembly.fa
+dependencies/Homo_sapiens.GRCh38.dna.primary_assembly.fa.fai
+dependencies/fordownload
+dependencies/fordownload.tar.gz
