--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,4 @@ dependencies/Homo_sapiens.GRCh38.dna.primary_assembly.fa
 dependencies/Homo_sapiens.GRCh38.dna.primary_assembly.fa.fai
 dependencies/fordownload
 dependencies/fordownload.tar.gz
+dependencies/GRCh38_U2.bed
